ajout connexion db MySql + accès fichier config.properties

--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.29</version>
+		</dependency>
+
 	</dependencies>
 </project>
