Première version fonctionnelle de la création utilisateur

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,74 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="https://jakarta.ee/xml/ns/jakartaee"
-	xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp"
-	xmlns:web="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	id="WebApp_ID" version="5.0">
-	<display-name>nutrition</display-name>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-	</welcome-file-list>
-	<jsp-config>
-		<jsp-property-group>
-			<url-pattern>*.jsp</url-pattern>
-			<include-prelude>/WEB-INF/taglibs.jsp</include-prelude>
-		</jsp-property-group>
-	</jsp-config>
-	
-	<servlet>
-		<description></description>
-		<display-name>Nutrition</display-name>
-		<servlet-name>Nutrition</servlet-name>
-		<servlet-class>com.jimmy.servlets.Nutrition</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Nutrition</servlet-name>
-		<url-pattern>/nutrition</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>Connexion</display-name>
-		<servlet-name>Connexion</servlet-name>
-		<servlet-class>com.jimmy.servlets.Connexion</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Connexion</servlet-name>
-		<url-pattern>/connexion</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>Deconnexion</display-name>
-		<servlet-name>Deconnexion</servlet-name>
-		<servlet-class>com.jimmy.servlets.Deconnexion</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Deconnexion</servlet-name>
-		<url-pattern>/deconnexion</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>MoisPrecedent</display-name>
-		<servlet-name>MoisPrecedent</servlet-name>
-		<servlet-class>com.jimmy.servlets.MoisPrecedent</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>MoisPrecedent</servlet-name>
-		<url-pattern>/moisPrecedent</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description></description>
-		<display-name>MoisSuivant</display-name>
-		<servlet-name>MoisSuivant</servlet-name>
-		<servlet-class>com.jimmy.servlets.MoisSuivant</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>MoisSuivant</servlet-name>
-		<url-pattern>/moisSuivant</url-pattern>
-	</servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="5.0">
+  <display-name>nutrition</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+  </welcome-file-list>
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsp</url-pattern>
+      <include-prelude>/WEB-INF/taglibs.jsp</include-prelude>
+    </jsp-property-group>
+  </jsp-config>
+  <servlet>
+    <description></description>
+    <display-name>Nutrition</display-name>
+    <servlet-name>Nutrition</servlet-name>
+    <servlet-class>com.jimmy.servlets.Nutrition</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Nutrition</servlet-name>
+    <url-pattern>/nutrition</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Connexion</display-name>
+    <servlet-name>Connexion</servlet-name>
+    <servlet-class>com.jimmy.servlets.Connexion</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Connexion</servlet-name>
+    <url-pattern>/connexion</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Deconnexion</display-name>
+    <servlet-name>Deconnexion</servlet-name>
+    <servlet-class>com.jimmy.servlets.Deconnexion</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Deconnexion</servlet-name>
+    <url-pattern>/deconnexion</url-pattern>
+  </servlet-mapping>
+    <servlet>
+    <description></description>
+    <display-name>CreationUtilisateur</display-name>
+    <servlet-name>CreationUtilisateur</servlet-name>
+    <servlet-class>com.jimmy.servlets.CreationUtilisateur</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CreationUtilisateur</servlet-name>
+    <url-pattern>/creationUtilisateur</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MoisPrecedent</display-name>
+    <servlet-name>MoisPrecedent</servlet-name>
+    <servlet-class>com.jimmy.servlets.MoisPrecedent</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MoisPrecedent</servlet-name>
+    <url-pattern>/moisPrecedent</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MoisSuivant</display-name>
+    <servlet-name>MoisSuivant</servlet-name>
+    <servlet-class>com.jimmy.servlets.MoisSuivant</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MoisSuivant</servlet-name>
+    <url-pattern>/moisSuivant</url-pattern>
+  </servlet-mapping>
 </web-app>
