--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -105,4 +105,14 @@
     <servlet-name>AjouterAlimentConsomme</servlet-name>
     <url-pattern>/ajouterAlimentConsomme</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FiltrerListeAlimentConsomme</display-name>
+    <servlet-name>FiltrerListeAlimentConsomme</servlet-name>
+    <servlet-class>com.jimmy.servlets.FiltrerListeAlimentConsomme</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FiltrerListeAlimentConsomme</servlet-name>
+    <url-pattern>/filtrerListeAlimentConsomme</url-pattern>
+  </servlet-mapping>
 </web-app>
